Restore validateAnalyzerSettings + lost test coverage
- OpenSearchManager.validateAnalyzerSettings: re-add cluster-level _analyze
  probe with retry on index_not_found_exception / IOException. Wire it back
  through TextAnalyzerManagerImpl.create / update after $ref resolution.
- SearchIndexLifecycleManagerImplTest: restore handleCreate / handleDelete /
  SearchIndexRowHandler tests dropped from the refactor (lock contention,
  recoverable propagation, error truncation, max-rows gate, status-row
  bookkeeping, null-id row keying), adapted to the 5-arg createIndex.
- OpenSearchManagerImplValidateTest: cover retry-then-succeed and retry-
  exhaustion paths plus retry-backoff override.
- OpenSearchManagerImplAutoWiredTest: restore the every-column-type
  round-trip and validate-analyzer-settings autowired probes.
- SearchConfigurationManagerImpl: collapse spurious churn (List.of, restored
  comments, original error message wording).
- SearchConfigurationManagerImplTest, TextAnalyzerManagerImplTest: revert
  user-helper rewrite to develop's @BeforeEach field-based pattern.